# csv_sjis_rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
test/csv_sjis/: sjis.csv
