[package]
name = "hello00"
version = "0.1.0"
authors = ["heiwa4126 <heiwa4126@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clippy = { version = "*", optional = true }

[dependencies]
anyhow = "1.0"
csv = "1.1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"